@@ -1,21 +1,25 @@
-{% extends BASE_HTML %}
+{% extends 'creme_core/detailview.html' %}
 {% load i18n creme_bricks creme_widgets %}
 
-{% block page_title %}{{job}} - {% endblock %}
+{% block global_buttons %}
+    <li>
+        <a class="menu_button menu-button-icon" href="{{list_url}}">{% translate 'List of jobs' as list_label %}
+            {% widget_icon name='listview' size='global-button' label=list_label %}
+            {{list_label}}
+        </a>
+    </li>
+{% endblock %}
 
-{% block content %}
-    <div class="buttons-list global-buttons">
-        <ul>
-            <li>
-                <a class="menu_button menu-button-icon" href="{{list_url}}">{% translate 'List of jobs' as list_label %}
-                    {% widget_icon name='listview' size='global-button' label=list_label %}
-                    {{list_label}}
-                </a>
-            </li>
-        </ul>
-    </div>
-
+{% block view_title %}
+    {% brick_declare bricks.hat %}
     {% brick_declare bricks.main %}
+
+    {% brick_display bricks.hat %}
+{% endblock %}
+
+{% block instance_buttons_container %}{% endblock %}
+
+{% block main_content %}
     {% brick_display bricks.main %}
     {% brick_end %}
 {% endblock %}
